--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -37,7 +37,7 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    max-height: 500px;
+    // max-height: 500px;
     object-fit: cover;
 }
 
