--- a/src/styles/infografis-detail-main.scss
+++ b/src/styles/infografis-detail-main.scss
@@ -1,8 +1,87 @@
 @import './variables.scss';
 
-.infografis-detail-main{
-    width: 100%;
+.infografis-detail {
+    // padding-top: 150px
 }
-.infografis-main-container{
-    background-color: $bb-black;
+.infografis-detail .headline-container {
+    background-color: #e6e6e6;
+}
+.grid-content {
+    border-radius: 4px;
+    min-height: 36px;    
+}
+.infografis-detail .headline-container .title-container{    
+    h1{
+        color: $main-blue;
+        font-size: 2em;
+        margin: 20px 0 0 0;
+    }
+}
+.infografis-detail .headline-container .latest-news{
+    background-color: #fff;
+    min-height: 300px;
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+
+.infografis-detail .headline-container .latest-news .background {
+    position: relative;
+}
+.infografis-detail .headline-container .latest-news .backgroundx {
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    left: 0px; 
+    top: 0px; 
+    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+}
+.infografis-detail .headline-container .latest-news .background img{
+    width:100%;
+    // max-height: 500px;
+    object-fit: cover;
+}
+
+.infografis-detail .headline-container .latest-news .background .editorial-type-img {
+    position: absolute;
+    top: 5%;
+    left: 2%;
+    // transform: translate( -50%, -50% );
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    background-color: $main-blue;
+    padding: 10px 10px 8px 10px;
+        h2{
+            text-transform: uppercase;
+            font-size: 1em;
+            margin: 0;
+        }
+    
+}
+
+
+.infografis-detail .headline-container .latest-news .content{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.infografis-detail .headline-container .latest-news .content .ln-title{
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+.infografis-detail .headline-container .latest-news .content  .footer{
+    font-weight: bold;
+    font-size: 0.8em;
+}
+.infografis-detail .list-container{
+    margin-top:30px;
+    background-color: #fff;
+}
+
+.side-content{
+}
+.a-side{
+  margin-left: 20px;
 }
