--- a/src/styles/comment-list.scss
+++ b/src/styles/comment-list.scss
@@ -25,3 +25,8 @@
 .comment-list .comment-option .opt-label{
     font-size: 0.8em;
 }
+.comments-paging{
+    text-align: center;
+    margin-top: 15px;
+    padding-bottom: 10px;
+}
