--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -61,6 +61,7 @@ h1, h2, h3, h4, h5, h6{
 
 }
 
+.comments-paging,
 .ac-paging{
   .el-pagination.is-background .btn-next,
   .el-pagination.is-background .btn-prev,
