fix layout and video style

--- a/src/styles/editorial-video-list.scss
+++ b/src/styles/editorial-video-list.scss
@@ -1,7 +1,23 @@
 @import './variables.scss';
 
-.editoral-container {
-    // padding-top: 150px
+.editoral-container {    
+    border-top: 3px solid #e6e6e6;
+    .videoWrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 0;
+        height: 0;
+        overflow: hidden;    
+    }
+    .videoWrapper iframe,
+    .videoWrapper object,
+    .videoWrapper embed{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }        
 }
 .editoral-container .headline-container {
     background-color: #e6e6e6;
@@ -11,17 +27,16 @@
     min-height: 36px;    
 }
 .editoral-container .headline-container .title-container{    
-    h1{
-        color: $main-blue;
-        font-size: 2em;
-        margin: 20px 0 0 0;
-    }
+    
 }
 .editoral-container .headline-container .latest-news{
     background-color: #fff;
     min-height: 300px;
     margin-bottom: 40px;
     margin-top: 20px;
+    .videoWrapper{
+        margin: 20px 20px;
+    }
 }
 
 .editoral-container .headline-container .latest-news .background {
@@ -86,20 +101,14 @@
   margin-left: 20px;
 }
 
+.editoral-container .list-container {
+    padding: 20px 0;
+    .comments-content{
+        background-color: #e6e6e6;
+    }
+    .video-content{
+        padding-top: 40px;        
+    }
 
-.vid-main {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 0;
-    height: 0;
-    overflow: hidden;    
 }
-.vid-main iframe,
-.vid-main object,
-.vid-main embed{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+
