--- a/src/styles/videos-card.scss
+++ b/src/styles/videos-card.scss
@@ -1,6 +1,22 @@
 @import './variables.scss';
 .card-content{
     // background-color: violet;
+    .videoWrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 0;
+        height: 0;
+        overflow: hidden;    
+    }
+    .videoWrapper iframe,
+    .videoWrapper object,
+    .videoWrapper embed{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .card-content .news-col{
