editor;s pick news

--- a/src/styles/comment-box.scss
+++ b/src/styles/comment-box.scss
@@ -14,3 +14,9 @@
         height: 100%;
     }
 }
+.comment-box .content .disabled-lbl{
+    color: #fff;
+    text-align: center;
+    font-size: 10px;
+    line-height: 18px;
+}
