--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -110,3 +110,10 @@ h1, h2, h3, h4, h5, h6{
     height: 36px;
   }
 }
+
+disabled-label{
+  color: #ccc;
+  text-align: center;
+  font-size: 10px;
+  line-height: 18px;
+}
