red-line W13px, H7px

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -293,4 +293,10 @@ a:hover {
   background-color: #e6e6e6;
 }
 
+.red-line {
+  background-color: $main-red;
+  width: 13px;
+  height: 7px;
+  margin: 5px 0;    
+}
 //END start
