--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -1,58 +1,62 @@
 @import './variables.scss';
 .card-content{
-    // background-color: violet;
-}
+    .news-col{
+        .news-card{
+            
+            .footer{
+                font-weight: bold;
+                font-size: 0.8em;
+            }
+            .mini-thumbnail {
+                position: relative;
+                .card-image{
+                    width: 100%;
+                    max-height: 163px;
+                    object-fit: cover;
+                }
 
-.card-content .news-col{
-    //margin: 10px;
-    // border: solid 1px;
-    // border-color: #e6e6e6;
-}.card-content .news-col .news-card{
-    // margin: 5px;
-} .card-content .news-col .news-card .ac-title span{
-    font-weight: bold;
-    font-size: 0.9em;
-}.card-content .news-col .news-card .footer{
-    font-weight: bold;
-    font-size: 0.8em;
+                .editorial-type-img {
+                    position: absolute;
+                    top: 10%;
+                    left: 5%;
+                    color: white;
+                    background-color: $main-blue;
+                    padding-left: 10px;
+                    padding-right: 10px;
+                    text-transform: uppercase;
+                    h3{
+                        font-size: 0.7em;
+                        font-weight: 900;
+                        margin: 5px 0;
+                    }
+                }
+            }
+            .ac-bottom-content{
+                padding-top: 10px;
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-bottom: 20px;
+                .share{                    
+                    padding-bottom: 5px;
+                }
+                .ac-title{
+                    padding-bottom: 10px;
+                    h2{
+                        font-weight: bold;
+                        font-size: 0.9em;
+                        line-height: 1.3em;
+                        margin: 0;
+                    }
+                }
+                .author{
+                    font-weight: 900;
+                    font-size: 0.8em;                    
+                    margin: 0;
+                }
+            }
+        }
+    }
 }
-.mini-thumbnail {
-    position: relative;
-}
-.mini-thumbnail .card-image{
-    width: 100%;
-    height: auto;
-    max-height: 235px;
-}
-
-.card-image{
-    width: 100%;
-    height: auto;
-    max-height: 235px;
-}
-
-.mini-thumbnail .editorial-type-img {
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    // transform: translate( -50%, -50% );
-    text-align: center;
-    color: white;
-    background-color: $main-blue;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-transform: uppercase;
-}
-.mini-thumbnail img{
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.mini-thumbnail h3{
-    font-size: 0.6em;
-}
-
 .el-row {
     margin-bottom: 20px;
    &:last-child {
@@ -67,12 +71,7 @@
     }
 }
 
-.ac-bottom-content{
-    padding-top: 10px;
-    padding-left: 14px;
-    padding-right: 14px;
-    padding-bottom: 10px;
-}
+
 .ac-footer{
     font-weight: bold;
     font-size: 0.8em;   
@@ -81,7 +80,4 @@
 .ac-paging{
     text-align: center;
     margin-top: 10px;
-}
-.ac-title h2{
-    font-size: 1em;
 }
