--- a/src/styles/editorial-video-list.scss
+++ b/src/styles/editorial-video-list.scss
@@ -100,7 +100,10 @@
 .a-side{
   margin-left: 20px;
 }
-
+.side-content .a-side .vid{
+    height: 20px;
+}
+  
 .editoral-container .list-container {
     padding: 20px 0;
     .comments-content{
