--- a/src/styles/advertisement-side.scss
+++ b/src/styles/advertisement-side.scss
@@ -1,6 +1,6 @@
 .advertisement-news {
     border: solid 1px;
-    padding: 15px;
+    // padding: 15px;
     border-color: #e6e6e6;
     font-size: 0.8em;
 }
