--- a/src/styles/editor-pick-videos-side.scss
+++ b/src/styles/editor-pick-videos-side.scss
@@ -24,3 +24,44 @@
     font-weight: bold;
     font-size: 0.8em;
 }
+.editor-pick-video{
+    // background-color: violet;
+    .videoWrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 0;
+        height: 0;
+        overflow: hidden;    
+    }
+    .videoWrapper iframe,
+    .videoWrapper object,
+    .videoWrapper embed{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+.vid-thumb {
+    margin: 3px 0;
+  }
+  
+  .vid-thumb .vid-thumb-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+  }
+  
+  .vid-thumb .vid-thumb-wrapper iframe,
+  .vid-thumb .vid-thumb-wrapper object,
+  .vid-thumb .vid-thumb-wrapper embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
