--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -93,9 +93,9 @@ h1, h2, h3, h4, h5, h6{
     line-height: 24px;
   }
   .el-pagination.is-background .el-pager li.active { 
-    border: 2px solid $main-red;
+    border: 2px solid $black-2;
     border-radius: 50%;
-    color: $main-red;
+    color: $black-2;
     line-height: 20px;   
   }
 }
