--- a/src/styles/articles-card.scss
+++ b/src/styles/articles-card.scss
@@ -40,7 +40,8 @@
                     padding-bottom: 5px;
                 }
                 .ac-title{
-                    padding-bottom: 10px;
+                    // padding-bottom: 10px;
+                    min-height: 40px;
                     h2{
                         font-weight: bold;
                         font-size: 0.9em;
