--- a/src/styles/editorial-list.scss
+++ b/src/styles/editorial-list.scss
@@ -15,7 +15,7 @@
         color: $main-blue;
         font-size: 34px;
         font-family: 'Neosans-Black';
-        margin: 20px 0;
+        margin: 20px 0 0 0;
 
     }
 }
@@ -23,7 +23,7 @@
     background-color: #fff;
     // min-height: 300px;
     // margin-bottom: 40px;
-    // margin-top: 20px;
+    margin-top: 20px;
 }
 
 .editoral-container .headline-container .latest-news .background {
