--- a/src/styles/editorial-image-list.scss
+++ b/src/styles/editorial-image-list.scss
@@ -13,14 +13,15 @@
 .editoral-container .headline-container .title-container{    
     h1{
         color: $main-blue;
-        font-size: 2em;
-        margin: 20px 0 0 0;
+        font-size: 34px;
+        font-family: 'Neosans-Black';
+        margin: 20px 0;
     }
 }
 .editoral-container .headline-container .latest-news{
     background-color: #fff;
-    min-height: 300px;
-    margin-bottom: 40px;
+    //min-height: 300px;
+    //margin-bottom: 40px;
     margin-top: 20px;
 }
 
@@ -37,7 +38,7 @@
 }
 .editoral-container .headline-container .latest-news .background img{
     width:100%;
-    // max-height: 500px;
+    max-height: 436px;
     object-fit: cover;
 }
 
@@ -61,16 +62,20 @@
 
 
 .editoral-container .headline-container .latest-news .content{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding: 20px 20px 0 20px;
 }
-
+.editoral-container .headline-container .latest-news .content .ln-share{
+    margin-bottom: 10px;
+}
 .editoral-container .headline-container .latest-news .content .ln-title{
     font-weight: bold;
     font-size: 1.1em;
+    margin-bottom: 10px;
 }
-
+.editoral-container .headline-container .latest-news .content .ln-teaser{    
+    font-size: 0.75em;
+    margin-bottom: 10px;
+}
 .editoral-container .headline-container .latest-news .content  .footer{
     font-weight: bold;
     font-size: 0.8em;
