--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,6 +7,7 @@ h1, h2, h3, h4, h5, h6{
 .container {  
   position: relative;
   max-width: 1170px;
+  // max-width: 900px;
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;  
@@ -15,6 +16,7 @@ h1, h2, h3, h4, h5, h6{
 .container-black {  
   position: relative;
   max-width: 1170px;
+  // max-width: 900px;
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;  
@@ -114,9 +116,12 @@ h1, h2, h3, h4, h5, h6{
 /*
   home-headline-slider indicator
 */
-.hl-slider{
+.hl-slider{  
   .el-carousel__container{
-    height: 650px;
+    height: 650px;    
+  }
+  .el-carousel__indicators{
+    
   }
   .el-carousel__button{
     width: 12px;
