.side-separator margin: 20px

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -176,7 +176,8 @@ a:hover {
 }
 
 .side-separator {
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   text-align: right;
 }
 .side-separator span{
