--- a/src/styles/home-header.scss
+++ b/src/styles/home-header.scss
@@ -131,6 +131,11 @@ nav {
   padding-right: 9px;  
 }
 
+#logo a{
+  margin: 0;
+  padding: 0;
+  border: none;
+}
 #logo img{
   height: 30px;  
 }
